--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "download.js",
+  "name": "node-dl",
   "description": "node.js download counter and server",
   "version": "0.0.1",
   "author": "Drew Harris",
   "dependencies": {
-    "express": "3.0.5",
+    "express": "3.2.1",
     "when": "1.5.1",
     "leveldb": "0.7.1"
   }
