--- a/package.json
+++ b/package.json
@@ -1,11 +1,26 @@
 {
-  "name": "node-dl",
-  "description": "node.js download counter and server",
+  "name": "mrdownload",
+  "description": "node.js download server with download counter",
   "version": "0.0.1",
-  "author": "Drew Harris",
+  "author": "Drew Harris <drewbharris@gmail.com>",
   "dependencies": {
     "express": "3.2.1",
     "when": "1.5.1",
     "leveldb": "0.7.1"
+  },
+  "engines": {
+    "node": ">=0.8"
+  },
+  "main": "./index.js",
+  "keywords": [
+    "download",
+    "counter",
+    "static"
+  ],
+  "scripts": {
+    "test": ""
+  },
+  "directories": {
+    
   }
 }
